welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:8: error: ';' expected but 'if' found.
  }if (c>=13 && c<=19){
   ^